--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "method-override": "^2.3.10",
     "mysql": "^2.15.0",
     "mysql2": "^1.5.3",
-    "sequelize": "^4.37.10",
+    "sequelize": "^4.37.10"
+  },
+  "devDependencies": {
     "sequelize-cli": "^4.0.0"
   }
 }
