--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "init": "^0.1.2",
+    "lodash": "^4.17.20",
     "method-override": "^3.0.0",
     "mysql": "^2.18.1",
     "mysql2": "^1.7.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "sequelize": "^5.15.1"
+    "sequelize": "^5.22.3"
   },
   "devDependencies": {
     "sequelize-cli": "^5.5.1"
